--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: "/Type-on-Strap"
+baseurl: "https://rofarias.github.io/rogeriodesouzafarias/"
 url: "https://github.com/rofarias/rogeriodesouzafarias"
 title: Rogério de Souza Farias # site's title
 description: "Sítio Eletrônico Pessoal" # used by search engines
